<resources>
    <string name="app_name">KCA App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="news_title">News Title</string>
    <string name="news_author">News Author</string>
    <string name="news_brief">News Brief</string>
    <string name="news_date">News Date</string>
    <string name="events_title">Event\'s Title</string>
    <string name="events_organizer">Event\'s Organizer</string>
    <string name="events_venue">Event\'s Venue</string>
    <string name="events_date">Event\'s Date</string>

    <string name="txtUserName">Student ID(Username):</string>
    <string name="txtPassword">Password:</string>
    <string name="txtCourse">Course:</string>
    <string name="txtStudentEmail">Student Email:</string>
    <string name="txtWelcome">Welcome,</string>
    <string name="txtForgotDetails">Forgot your Username or Password?</string>
    <string name="txtNoAccount">No Account? Sign Up!</string>
    <string name="txtSignUp">Sign up</string>
    <string name="txtTitle">Title &amp; Edition/Volume</string>
    <string name="txtSubtitle">Subtitle</string>
    <string name="txtAuthor">Author</string>
    <string name="txtDatePublished">Date Published</string>
    <string name="txtUnitName">Unit Name</string>
    <string name="txtLecturer">Lecturer</string>
    <string name="txtTime">Time</string>
    <string name="txtRoom">Room</string>
    <string name="txtType">Type</string>

    <string name="edUserName">Student ID(Username)</string>
    <string name="edPassword">Password</string>
    <string name="edStudentEmail">Student Email</string>

    <string name="imgvProfIcon">Profile Picture</string>
    <string name="imgvCoverPhoto">Cover Photo</string>
    <string name="imgvShare">Share</string>

    <string name="cboNewsRead">Read</string>
    <string name="cboMakeUp">Make-up</string>

    <string name="tabClass">Class</string>
    <string name="tabExamsTests">Exams &amp; Tests</string>

    <string name="mnuAcademics">Academics</string>
    <string name="mnuLifetyle">Lifestyle</string>
    <string name="mnuEntertainment">Entertainment</string>
    <string name="mnuRevisionNotes">Revision Notes</string>
    <string name="mnuRevisionPapers">Revision Papers</string>
    <string name="mnuBooks">Books</string>
    <string name="mnuJournals">Journals</string>
    <string name="mnuNews">News</string>
    <string name="mnuEvents">Events</string>
    <string name="mnuChats">Chats</string>
    <string name="mnuSignUp">Sign Up</string>
    <string name="mnuSignIn">Sign In</string>
    <string name="mnuCancel">Cancel</string>
    <string name="mnuMySpace">My Space</string>
    <string name="mnuProfile">My Profile</string>
    <string name="mnuSettings">Settings</string>
    <string name="mnuFeedback">Feedback</string>
    <string name="mnuTimeTable">Time Table</string>
    <string name="mnuMyNotesPapers">My Notes and Papers</string>
    <string name="mnuExtras">Extras</string>

    <string name="tstNoEmailApp">Sorry, there\'s no Email App detected in your device.</string>

    <string name="inSendFeedbackSubject">KCA App</string>
    <string name="inSendFeedbackBody">Dear Chaward,</string>

    <string name="sprefStudentAccount">uk.co.edwardquixote.Chaward.kcaapp.SPREFSTUDENTACCOUNT</string>
    <string name="sprefStudentID">uk.co.edwardquixote.Chaward.kcaapp.SPREFSTUDENTID</string>
    <string name="sprefStudentPassword">uk.co.edwardquixote.Chaward.kcaapp.SPREFSTUDENTPASSWORD</string>
    <string name="sprefStudentEmail">uk.co.edwardquixote.Chaward.kcaapp.SPREFSTUDENTEMAIL</string>

    <string name="sDrawerOpen">Drawer Open</string>
    <string name="sDrawerClose">Drawer Close</string>
    <string name="sInvalidID">Invalid Student ID</string>
    <string name="sInvalidPassword">Invalid Password</string>

    <string name="title_fragment_revision_notes">Revision Notes</string>
    <string name="title_fragment_revision_papers">Revision Papers</string>
    <string name="title_fragment_books">Books</string>
    <string name="title_fragment_journals">Journals</string>
    <string name="title_fragment_events">Events</string>
    <string name="title_fragment_news">News</string>
    <string name="title_activity_kcahome">Home</string>
    <string name="title_activity_kcasign_up">Sign Up</string>
    <string name="title_activity_kcasign_in">Sign In</string>
    <string name="title_activity_kcatimetable">Timetable</string>

    <string-array name="saryEventsItems">
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
        <item>Event 5</item>
    </string-array>
    <string-array name="saryNewsItems">
        <item>News 1</item>
        <item>News 2</item>
        <item>News 3</item>
        <item>News 4</item>
        <item>News 5</item>
    </string-array>
    <string-array name="saryEmailAddress">
        <item>chawardinc@hotmail.co.ke</item>
    </string-array>

</resources>
