<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardNews"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height_news"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgvNewsCoverPhoto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/imgvCoverPhoto"
                android:src="@drawable/ic_kca_logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/padding_for_cards_left"
                android:paddingRight="@dimen/padding_for_cards_right">

                <TextView
                    android:id="@+id/txtNewsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_title"
                    android:textSize="@dimen/textsize_18"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtNewsAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtNewsTitle"
                    android:layout_marginTop="10dp"
                    android:text="@string/news_author"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/txtNewsBrief"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtNewsAuthor"
                    android:layout_marginTop="10dp"
                    android:text="@string/news_brief"/>

                <TextView
                    android:id="@+id/txtNewsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBaseline="@id/txtNewsAuthor"
                    android:text="@string/news_date"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
