<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/relaySignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="uk.co.edwardquixote.Chaward.kcaapp.KCASignInActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbSIToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/clrKCACream"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tbSIToolBar"
        android:layout_marginTop="30dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txtSIWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/txtWelcome"
            android:textSize="@dimen/textsize_24"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSIEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edSIEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edStudentEmail"
                    android:gravity="center"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSIPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilSIEmailAddress"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/edSIPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edPassword"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtSIForgotDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilSIPassword"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/txtForgotDetails"
                android:textColor="@color/clrBlue"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSIForgotDetails"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSINoAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtNoAccount"/>

                <TextView
                    android:id="@+id/txtSISignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/txtSignUp"
                    android:textColor="@color/clrBlue"/>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
