<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardRevisionPapers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_for_cards_top"
            android:layout_marginBottom="@dimen/margin_for_cards_bottom"
            android:layout_marginLeft="@dimen/margin_for_cards_left"
            android:layout_marginRight="@dimen/margin_for_cards_right"
            android:layout_marginStart="@dimen/margin_for_cards_left"
            android:layout_marginEnd="@dimen/margin_for_cards_right">

            <TextView
                android:id="@+id/txtRevPapersTitleEditionVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTitle"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtRevPapersSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRevPapersTitleEditionVolume"
                android:layout_marginTop="10dp"
                android:text="@string/txtSubtitle"/>

            <TextView
                android:id="@+id/txtRevPapersAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRevPapersSubtitle"
                android:layout_marginTop="10dp"
                android:text="@string/txtAuthor"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/txtRevPapersDatePublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@id/txtRevPapersAuthor"
                android:text="@string/txtDatePublished"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>