<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scvSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="uk.co.edwardquixote.Chaward.kcaapp.KCASignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbSUToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clrKCACream"
            android:minHeight="?attr/actionBarSize"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tbSUToolBar"
            android:layout_marginTop="30dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/imgvSUProfileIcon"
                android:layout_width="@dimen/width_for_SU_image"
                android:layout_height="@dimen/height_for_SU_image"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/imgvProfIcon"
                android:src="@drawable/ic_kca_logo"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cardSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgvSUProfileIcon"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="@dimen/card_corner_radius"
                card_view:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilSUUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edSUUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/edUserName"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilSUPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edSUPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/edPassword"
                            android:password="true"
                            android:singleLine="true"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilStudentEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edSUStudentEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/edStudentEmail"
                            android:inputType="textEmailAddress"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
